<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/player_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:labelFor="@id/select_track"
        android:id="@+id/select_track"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="#ffffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/select_track_short"
        android:contentDescription="@string/select_track">

    </Button>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/player_background"
        android:id="@+id/media_detail_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        >
        <TextView
            android:labelFor="@id/media_detail_title"
            android:background="@color/player_background"
            android:textColor="@color/colorBackgroundGray"
            android:id="@+id/media_detail_title"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            android:inputType="none"
            android:contentDescription="@string/media_title">
        </TextView>
        <TextView
            android:labelFor="@id/media_detail_subtitle"
            android:background="@color/player_background"
            android:textColor="@color/colorBackgroundGray"
            android:id="@+id/media_detail_subtitle"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/media_detail_title"
            android:autofillHints=""
            android:inputType="none"
            android:contentDescription="@string/media_subtitle">
        </TextView>
        <ImageView
            android:labelFor="@id/media_detail_image"
            android:background="#FFFFFF"
            android:textColor="@color/colorBackgroundGray"
            android:id="@+id/media_detail_image"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/media_detail_subtitle"
            android:visibility="gone"
            android:contentDescription="@string/media_image">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:background="@color/player_background"
        android:id="@+id/player_container"
        android:keepScreenOn="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/player_background"
        android:id="@+id/seek_bar_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <SeekBar
            android:background="@color/colorBackgroundGray"
            android:id="@+id/seek_bar"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </SeekBar>
        <TextView
            android:background="@color/player_background"
            android:textColor="@color/colorBackgroundGray"
            android:id="@+id/seek_bar_text"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar"
            android:autofillHints="">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>